@@ -1,3 +1,12 @@
+2008-06-07  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/Evil.h:
+	include windows.h instead of windef.h
+	undefine PATH_MATH before defining it
+
+	* src/lib/dlfcn/dlfcn.c:
+	remove useless header file
+
 2008-06-06  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/Evil.h:
